@@ -8,10 +8,10 @@ import java.net.URISyntaxException;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -27,9 +27,6 @@ import org.enso.common.LanguageInfo;
 import org.enso.distribution.DistributionManager;
 import org.enso.distribution.Environment;
 import org.enso.editions.DefaultEdition;
-import org.enso.languageserver.boot.LanguageServerConfig;
-import org.enso.languageserver.boot.ProfilingConfig;
-import org.enso.languageserver.boot.StartupConfig;
 import org.enso.libraryupload.LibraryUploader.UploadFailedError;
 import org.enso.pkg.Contact;
 import org.enso.pkg.PackageManager;
@@ -39,6 +36,9 @@ import org.enso.polyglot.Module;
 import org.enso.polyglot.PolyglotContext;
 import org.enso.profiling.sampler.NoopSampler;
 import org.enso.profiling.sampler.OutputStreamSampler;
+import org.enso.runner.common.LanguageServerApi;
+import org.enso.runner.common.ProfilingConfig;
+import org.enso.runner.common.WrongOption;
 import org.enso.version.VersionDescription;
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.PolyglotException.StackFrame;
@@ -53,6 +53,7 @@ import scala.runtime.BoxedUnit;
 
 /** The main CLI entry point class. */
 public final class Main {
+  private static final String JVM_OPTION = "jvm";
   private static final String RUN_OPTION = "run";
   private static final String INSPECT_OPTION = "inspect";
   private static final String DUMP_GRAPHS_OPTION = "dump-graphs";
@@ -69,14 +70,6 @@ public final class Main {
   private static final String PROFILING_PATH = "profiling-path";
   private static final String PROFILING_TIME = "profiling-time";
   private static final String LANGUAGE_SERVER_OPTION = "server";
-  private static final String DAEMONIZE_OPTION = "daemon";
-  private static final String INTERFACE_OPTION = "interface";
-  private static final String RPC_PORT_OPTION = "rpc-port";
-  private static final String DATA_PORT_OPTION = "data-port";
-  private static final String SECURE_RPC_PORT_OPTION = "secure-rpc-port";
-  private static final String SECURE_DATA_PORT_OPTION = "secure-data-port";
-  private static final String ROOT_ID_OPTION = "root-id";
-  private static final String ROOT_PATH_OPTION = "path";
   private static final String IN_PROJECT_OPTION = "in-project";
   private static final String VERSION_OPTION = "version";
   private static final String JSON_OPTION = "json";
@@ -96,7 +89,6 @@ public final class Main {
   private static final String HIDE_PROGRESS = "hide-progress";
   private static final String AUTH_TOKEN = "auth-token";
   private static final String AUTO_PARALLELISM_OPTION = "with-auto-parallelism";
-  private static final String SKIP_GRAALVM_UPDATER = "skip-graalvm-updater";
   private static final String EXECUTION_ENVIRONMENT_OPTION = "execution-environment";
   private static final String WARNINGS_LIMIT = "warnings-limit";
 
@@ -126,6 +118,15 @@ public final class Main {
             .argName("file")
             .longOpt(RUN_OPTION)
             .desc("Runs a specified Enso file.")
+            .build();
+    var jvm =
+        cliOptionBuilder()
+            .hasArg(true)
+            .numberOfArgs(1)
+            .optionalArg(true)
+            .argName("jvm")
+            .longOpt(JVM_OPTION)
+            .desc("Specifies whether to run JVM mode and optionally selects a JVM to run with.")
             .build();
     var inspect =
         cliOptionBuilder()
@@ -226,10 +227,13 @@ public final class Main {
             .desc("The duration in seconds limiting the profiling time.")
             .build();
     var deamonizeOption =
-        cliOptionBuilder().longOpt(DAEMONIZE_OPTION).desc("Daemonize Language Server").build();
+        cliOptionBuilder()
+            .longOpt(LanguageServerApi.DAEMONIZE_OPTION)
+            .desc("Daemonize Language Server")
+            .build();
     var interfaceOption =
         cliOptionBuilder()
-            .longOpt(INTERFACE_OPTION)
+            .longOpt(LanguageServerApi.INTERFACE_OPTION)
             .hasArg(true)
             .numberOfArgs(1)
             .argName("interface")
@@ -237,7 +241,7 @@ public final class Main {
             .build();
     var rpcPortOption =
         cliOptionBuilder()
-            .longOpt(RPC_PORT_OPTION)
+            .longOpt(LanguageServerApi.RPC_PORT_OPTION)
             .hasArg(true)
             .numberOfArgs(1)
             .argName("rpc-port")
@@ -245,7 +249,7 @@ public final class Main {
             .build();
     var secureRpcPortOption =
         cliOptionBuilder()
-            .longOpt(SECURE_RPC_PORT_OPTION)
+            .longOpt(LanguageServerApi.SECURE_RPC_PORT_OPTION)
             .hasArg(true)
             .numberOfArgs(1)
             .argName("rpc-port")
@@ -253,7 +257,7 @@ public final class Main {
             .build();
     var dataPortOption =
         cliOptionBuilder()
-            .longOpt(DATA_PORT_OPTION)
+            .longOpt(LanguageServerApi.DATA_PORT_OPTION)
             .hasArg(true)
             .numberOfArgs(1)
             .argName("data-port")
@@ -261,7 +265,7 @@ public final class Main {
             .build();
     var secureDataPortOption =
         cliOptionBuilder()
-            .longOpt(SECURE_DATA_PORT_OPTION)
+            .longOpt(LanguageServerApi.SECURE_DATA_PORT_OPTION)
             .hasArg(true)
             .numberOfArgs(1)
             .argName("data-port")
@@ -272,7 +276,7 @@ public final class Main {
             .hasArg(true)
             .numberOfArgs(1)
             .argName("uuid")
-            .longOpt(ROOT_ID_OPTION)
+            .longOpt(LanguageServerApi.ROOT_ID_OPTION)
             .desc("Content root id.")
             .build();
     var pathOption =
@@ -280,7 +284,7 @@ public final class Main {
             .hasArg(true)
             .numberOfArgs(1)
             .argName("path")
-            .longOpt(ROOT_PATH_OPTION)
+            .longOpt(LanguageServerApi.ROOT_PATH_OPTION)
             .desc("Path to the content root.")
             .build();
     var inProjectOption =
@@ -412,7 +416,7 @@ public final class Main {
 
     var skipGraalVMUpdater =
         cliOptionBuilder()
-            .longOpt(SKIP_GRAALVM_UPDATER)
+            .longOpt(LanguageServerApi.SKIP_GRAALVM_UPDATER)
             .desc("Skips GraalVM and its components setup during bootstrapping.")
             .build();
 
@@ -451,6 +455,7 @@ public final class Main {
     options
         .addOption(help)
         .addOption(repl)
+        .addOption(jvm)
         .addOption(run)
         .addOption(inspect)
         .addOption(dumpGraphs)
@@ -508,17 +513,17 @@ public final class Main {
   }
 
   /** Terminates the process with a failure exit code. */
-  private RuntimeException exitFail() {
+  private static RuntimeException exitFail() {
     return doExit(1);
   }
 
   /** Terminates the process with a success exit code. */
-  private RuntimeException exitSuccess() {
+  private static RuntimeException exitSuccess() {
     return doExit(0);
   }
 
   /** Shuts down the logging service and terminates the process. */
-  private RuntimeException doExit(int exitCode) {
+  private static RuntimeException doExit(int exitCode) {
     RunnerLogging.tearDown();
     System.exit(exitCode);
     return null;
@@ -932,7 +937,7 @@ public final class Main {
   }
 
   /** Parses the log level option. */
-  private Level parseLogLevel(String levelOption) {
+  private static Level parseLogLevel(String levelOption) {
     var name = levelOption.toLowerCase();
     var found =
         Stream.of(Level.values()).filter(x -> name.equals(x.name().toLowerCase())).findFirst();
@@ -949,7 +954,7 @@ public final class Main {
   }
 
   /** Parses an URI that specifies the logging service connection. */
-  private URI parseUri(String string) {
+  private static URI parseUri(String string) {
     try {
       return new URI(string);
     } catch (URISyntaxException ex) {
@@ -966,7 +971,7 @@ public final class Main {
    *
    * @param args the command line arguments
    */
-  public static void main(String[] args) throws IOException {
+  public static void main(String[] args) throws Exception {
     new Main().launch(args);
   }
 
@@ -1161,84 +1166,6 @@ public final class Main {
     }
   }
 
-  /**
-   * Handles `--server` CLI option
-   *
-   * @param line a CLI line
-   * @param logLevel log level to set for the engine runtime
-   */
-  private void runLanguageServer(CommandLine line, Level logLevel) {
-    try {
-      var config = parseServerOptions(line);
-      LanguageServerApp.run(config, logLevel, line.hasOption(Main.DAEMONIZE_OPTION));
-      throw exitSuccess();
-    } catch (WrongOption e) {
-      System.err.println(e.getMessage());
-      throw exitFail();
-    }
-  }
-
-  private static LanguageServerConfig parseServerOptions(CommandLine line) throws WrongOption {
-    UUID rootId;
-    try {
-      var id = line.getOptionValue(ROOT_ID_OPTION);
-      if (id == null) {
-        throw new WrongOption("Root id must be provided");
-      }
-      rootId = UUID.fromString(id);
-    } catch (IllegalArgumentException e) {
-      throw new WrongOption("Root must be UUID");
-    }
-    var rootPath = line.getOptionValue(ROOT_PATH_OPTION);
-    if (rootPath == null) {
-      throw new WrongOption("Root path must be provided");
-    }
-    var interfac = line.getOptionValue(INTERFACE_OPTION, "127.0.0.1");
-    int rpcPort;
-    try {
-      rpcPort = Integer.parseInt(line.getOptionValue(RPC_PORT_OPTION, "8080"));
-    } catch (NumberFormatException e) {
-      throw new WrongOption("Port must be integer");
-    }
-    int dataPort;
-    try {
-      dataPort = Integer.parseInt(line.getOptionValue(DATA_PORT_OPTION, "8081"));
-    } catch (NumberFormatException e) {
-      throw new WrongOption("Port must be integer");
-    }
-    Integer secureRpcPort;
-    try {
-      var port = line.getOptionValue(SECURE_RPC_PORT_OPTION);
-      secureRpcPort = port == null ? null : Integer.valueOf(port);
-    } catch (NumberFormatException e) {
-      throw new WrongOption("Port must be integer");
-    }
-    Integer secureDataPort;
-    try {
-      var port = line.getOptionValue(SECURE_DATA_PORT_OPTION);
-      secureDataPort = port == null ? null : Integer.valueOf(port);
-    } catch (NumberFormatException e) {
-      throw new WrongOption("Port must be integer");
-    }
-    var profilingConfig = parseProfilingConfig(line);
-    var graalVMUpdater = line.hasOption(SKIP_GRAALVM_UPDATER);
-
-    var config =
-        new LanguageServerConfig(
-            interfac,
-            rpcPort,
-            scala.Option.apply(secureRpcPort),
-            dataPort,
-            scala.Option.apply(secureDataPort),
-            rootId,
-            rootPath,
-            profilingConfig,
-            new StartupConfig(graalVMUpdater),
-            "language-server",
-            ExecutionContext.global());
-    return config;
-  }
-
   private static ProfilingConfig parseProfilingConfig(CommandLine line) throws WrongOption {
     Path profilingPath = null;
     try {
@@ -1281,7 +1208,7 @@ public final class Main {
   }
 
   @SuppressWarnings("unchecked")
-  private static final <T> scala.collection.immutable.List<T> nil() {
+  private static <T> scala.collection.immutable.List<T> nil() {
     return (scala.collection.immutable.List<T>) scala.collection.immutable.Nil$.MODULE$;
   }
 
@@ -1294,16 +1221,105 @@ public final class Main {
     System.out.println(msg);
   }
 
-  private void launch(String[] args) {
+  private void launch(String[] args) throws IOException, InterruptedException, URISyntaxException {
     var options = buildOptions();
     var line = preprocessArguments(options, args);
-    launch(options, line);
+
+    var logMasking = new boolean[1];
+    var logLevel = setupLogging(options, line, logMasking);
+
+    if (line.hasOption(JVM_OPTION)) {
+      var jvm = line.getOptionValue(JVM_OPTION);
+      var current = System.getProperty("java.home");
+      if (jvm == null) {
+        jvm = current;
+      }
+      if (current == null || !current.equals(jvm)) {
+        var loc = Main.class.getProtectionDomain().getCodeSource().getLocation();
+        var commandAndArgs = new ArrayList<String>();
+        JVM_FOUND:
+        if (jvm == null) {
+          var env = new Environment() {};
+          var dm = new DistributionManager(env);
+          var paths = dm.paths();
+          var files = paths.runtimes().toFile().listFiles();
+          if (files != null) {
+            for (var d : files) {
+              var java = new File(new File(d, "bin"), "java").getAbsoluteFile();
+              if (java.exists()) {
+                commandAndArgs.add(java.getPath());
+                break JVM_FOUND;
+              }
+            }
+          }
+          commandAndArgs.add("java");
+        } else {
+          commandAndArgs.add(new File(new File(new File(jvm), "bin"), "java").getAbsolutePath());
+        }
+        var jvmOptions = System.getenv("JAVA_OPTS");
+        if (jvmOptions != null) {
+          for (var op : jvmOptions.split(" ")) {
+            if (op.isEmpty()) {
+              continue;
+            }
+            commandAndArgs.add(op);
+          }
+        }
+
+        commandAndArgs.add("--add-opens=java.base/java.nio=ALL-UNNAMED");
+        commandAndArgs.add("--module-path");
+        var component = new File(loc.toURI().resolve("..")).getAbsoluteFile();
+        if (!component.getName().equals("component")) {
+          component = new File(component, "component");
+        }
+        if (!component.isDirectory()) {
+          throw new IOException("Cannot find " + component + " directory");
+        }
+        commandAndArgs.add(component.getPath());
+        commandAndArgs.add("-m");
+        commandAndArgs.add("org.enso.runtime/org.enso.EngineRunnerBootLoader");
+        var it = line.iterator();
+        while (it.hasNext()) {
+          var op = it.next();
+          if (JVM_OPTION.equals(op.getLongOpt())) {
+            continue;
+          }
+          var longName = op.getLongOpt();
+          if (longName != null) {
+            commandAndArgs.add("--" + longName);
+          } else {
+            commandAndArgs.add("-" + op.getOpt());
+          }
+          var values = op.getValuesList();
+          if (values != null) {
+            commandAndArgs.addAll(values);
+          }
+        }
+        commandAndArgs.addAll(line.getArgList());
+        var pb = new ProcessBuilder();
+        pb.inheritIO();
+        pb.command(commandAndArgs);
+        var p = pb.start();
+        var exitCode = p.waitFor();
+        if (exitCode == 0) {
+          throw exitSuccess();
+        } else {
+          throw doExit(exitCode);
+        }
+      }
+    }
+
+    launch(options, line, logLevel, logMasking[0]);
   }
 
   protected CommandLine preprocessArguments(Options options, String[] args) {
     var parser = new DefaultParser();
     try {
+      var startParsing = System.currentTimeMillis();
       var line = parser.parse(options, args);
+      logger.trace(
+          "Parsing Language Server arguments took {0}ms",
+          System.currentTimeMillis() - startParsing);
       return line;
     } catch (Exception e) {
       printHelp(options);
@@ -1311,17 +1327,27 @@ public final class Main {
     }
   }
 
-  protected void launch(Options options, CommandLine line) {
+  private static Level setupLogging(Options options, CommandLine line, boolean[] logMasking) {
     var logLevel =
         scala.Option.apply(line.getOptionValue(LOG_LEVEL))
-            .map(this::parseLogLevel)
+            .map(Main::parseLogLevel)
             .getOrElse(() -> defaultLogLevel);
-    var connectionUri = scala.Option.apply(line.getOptionValue(LOGGER_CONNECT)).map(this::parseUri);
-    var logMasking = !line.hasOption(NO_LOG_MASKING);
-    RunnerLogging.setup(connectionUri, logLevel, logMasking);
+    var connectionUri = scala.Option.apply(line.getOptionValue(LOGGER_CONNECT)).map(Main::parseUri);
+    logMasking[0] = !line.hasOption(NO_LOG_MASKING);
+    RunnerLogging.setup(connectionUri, logLevel, logMasking[0]);
+    return logLevel;
+  }
 
+  private void launch(Options options, CommandLine line, Level logLevel, boolean logMasking) {
     if (line.hasOption(LANGUAGE_SERVER_OPTION)) {
-      runLanguageServer(line, logLevel);
+      try {
+        var conf = parseProfilingConfig(line);
+        LanguageServerApi.launchLanguageServer(line, conf, logLevel);
+        throw exitSuccess();
+      } catch (WrongOption e) {
+        System.err.println(e.getMessage());
+        throw exitFail();
+      }
     } else {
       try {
         var conf = parseProfilingConfig(line);
@@ -1346,11 +1372,5 @@ public final class Main {
 
   protected String getLanguageId() {
     return LanguageInfo.ID;
-  }
-
-  private static final class WrongOption extends Exception {
-    WrongOption(String msg) {
-      super(msg);
-    }
   }
 }
